--- a/frontchat/src/Components/CommandBar/CommandBar.css
+++ b/frontchat/src/Components/CommandBar/CommandBar.css
@@ -2,7 +2,7 @@
   width: 70%;
   margin: 0px auto;
   padding: 20px 30px;
-  background-color: #e5ecf0;
+  background-color: rgba(213, 215, 216, 0.922);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,26 +10,26 @@
   z-index: 1;
   border-top: 1px solid #0a5768;
   border-radius: 30px;
-  box-shadow: 0px 0px 20px 0px cyan inset;
+  box-shadow: 0px 0px 20px 0px rgb(6, 25, 50) inset;
   bottom: 0px;
 }
 .tag_h1{
   color: #6d6666;
   width: 40%;
-  background: linear-gradient(30deg,rgb(18, 49, 101),rgba(15, 238, 246, 0.728));
+  background: linear-gradient(30deg,rgb(18, 49, 101),rgba(15, 129, 204, 0.728));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .command-input {
   flex: 1;
-  padding: 10px 16px;
+  padding: 20px 16px;
   font-size: 1em;
   border: none;
   outline: none;
   background-color: transparent;
   color: #000000;
-  border-radius: 20px;
+  border-radius: 50px;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.308);
   transition: all 0.3s ease-in-out;
 }
