--- a/frontchat/src/Components/Research/Research.css
+++ b/frontchat/src/Components/Research/Research.css
@@ -10,6 +10,8 @@
     border: none;
     box-shadow: 0px 0px 10px -5px blue;
     border-radius: 25px;
+    max-width: 88svh;
+
 }
 
 .research1_1{
@@ -178,6 +180,7 @@
 
     .paper{
         height: 420px;
+        max-width: 88svh;
     }
 
     .bottom-m{
@@ -214,6 +217,7 @@
 @media (max-width: 400px){
     .paper{
         height: 340px;
+        max-width: 88svh;
     }
 
     .metric-table{
