--- a/frontchat/src/Components/Research/Research.css
+++ b/frontchat/src/Components/Research/Research.css
@@ -11,7 +11,8 @@
     box-shadow: 0px 0px 10px -5px blue;
     border-radius: 25px;
     max-width: 88svh;
-
+    height: 500px;
+    width: 500px;
 }
 
 .research1_1{
@@ -180,7 +181,7 @@
 
     .paper{
         height: 420px;
-        max-width: 88svh;
+        max-width: 90svw;
     }
 
     .bottom-m{
@@ -217,7 +218,6 @@
 @media (max-width: 400px){
     .paper{
         height: 340px;
-        max-width: 88svh;
     }
 
     .metric-table{
